tests/invalid/simple/Assign_CompileFail_7.whiley
void f(int x, int y):
     int z
     z = x < y
